--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,9 +5,7 @@
         <item>Orders</item>
         <item>Wishlist</item>
         <item>Address</item>
-        <item>Settings</item>
         <item>Need Help ?</item>
-        <item>About Us</item>
         <item>Logout</item>
     </string-array>
 
@@ -15,10 +13,8 @@
         <item>@drawable/menu_home</item>
         <item>@drawable/menu_orders</item>
         <item>@drawable/menu_wishlist</item>
-        <item>@drawable/menu_address</item>
-        <item>@drawable/menu_settings</item>
-        <item>@drawable/menu_home</item>
-        <item>@drawable/menu_about_us</item>
+        <item>@drawable/menu_adress</item>
+        <item>@drawable/menu_need_help</item>
         <item>@drawable/menu_logout</item>
     </array>
 </resources>
