--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F2F9"
+    android:background="@color/white"
     tools:context="com.localfriend.AddressActivity">
 
     <include layout="@layout/toolbar_common" />
@@ -18,26 +18,201 @@
         <include layout="@layout/address_top_nav"></include>
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/service_container"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/top_nav_layout"
-        android:background="@null">
-
-    </FrameLayout>
-
-   <!-- <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_add_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/dim_16"
-        android:background="@drawable/curvy_gradient_bg"
-        android:gravity="center"
+        android:orientation="vertical"
         android:padding="@dimen/dim_10"
-        android:text="Add New Address"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dim_18"
-        app:textStyle="@integer/roboto_medium" />-->
+        tools:context="com.localfriend.fragments.AddressFragment">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/dim_10"-->
+            <!--android:theme="@style/MyTextInputLayout">-->
+
+            <EditText
+                android:id="@+id/edt_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableLeft="@drawable/checkout_person"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <EditText
+                android:id="@+id/edt_phone_no"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:drawableLeft="@drawable/checkout_call"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Phone No"
+                android:inputType="phone"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <EditText
+                android:id="@+id/edt_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:drawableLeft="@drawable/checkout_address"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="City"
+                android:inputType="textCapWords"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <EditText
+                android:id="@+id/edt_area"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:layout_marginLeft="25dp"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Area"
+                android:imeOptions="actionUnspecified"
+                android:inputType="textCapWords"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <!--</android.support.design.widget.TextInputLayout>-->
+
+            <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/dim_5"-->
+            <!--android:theme="@style/MyTextInputLayout">-->
+
+            <EditText
+                android:id="@+id/edt_colony"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:layout_marginLeft="25dp"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Colony"
+                android:imeOptions="actionUnspecified"
+                android:inputType="textCapWords"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <EditText
+                android:id="@+id/edt_flat_no"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:layout_marginLeft="25dp"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Flat/House/Office No."
+                android:imeOptions="actionUnspecified"
+                android:inputType="textCapWords"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+
+            <EditText
+                android:id="@+id/edt_pin_no"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dim_5"
+                android:background="@null"
+                android:layout_marginLeft="25dp"
+                android:drawablePadding="@dimen/dim_10"
+                android:hint="Pin Code"
+                android:imeOptions="actionUnspecified"
+                android:inputType="number"
+                android:maxLines="1"
+                android:padding="@dimen/dim_10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray_tab" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray_tab"></View>
+            <!--</android.support.design.widget.TextInputLayout>-->
+
+            <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/dim_5"-->
+            <!--android:theme="@style/MyTextInputLayout">-->
+
+
+            <!--</android.support.design.widget.TextInputLayout>-->
+        </LinearLayout>
+
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/txt_update"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/dim_10"
+            android:background="@drawable/curvy_gradient_white_bg"
+            android:gravity="center"
+            android:padding="@dimen/dim_10"
+            android:text="Update"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_18"
+            app:textStyle="@integer/roboto_medium" />
+    </RelativeLayout>
+
+
 </RelativeLayout>
