--- a/app/src/main/res/layout/adderess_item.xml
+++ b/app/src/main/res/layout/adderess_item.xml
@@ -4,15 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dim_10"
+    android:layout_marginTop="@dimen/dim_15"
+    android:background="?selectableItemBackground"
     android1:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dim_10"
-        android:layout_marginRight="@dimen/dim_10"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/dim_1"
@@ -24,18 +25,23 @@
             android:orientation="vertical">
 
             <com.localfriend.fonts.CustomFontTextView
+                android:id="@+id/txt_address_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dim_10"
-                android:layout_marginTop="@dimen/dim_10"
-                android:padding="@dimen/dim_5"
+                android:background="@drawable/rounded_corner_green_5"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
                 android:text="Office"
                 app:textStyle="@integer/roboto_medium" />
 
             <com.localfriend.fonts.CustomFontTextView
+                android:id="@+id/txt_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dim_10"
+                android:layout_marginTop="5dp"
                 android:padding="@dimen/dim_5"
                 android:text="Kuldeep singh"
                 android:textColor="@color/black"
@@ -43,50 +49,56 @@
                 app:textStyle="@integer/roboto_medium" />
 
             <com.localfriend.fonts.CustomFontTextView
+                android:id="@+id/txt_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dim_15"
                 android:layout_marginLeft="@dimen/dim_10"
                 android:padding="@dimen/dim_5"
                 android:text="SF - 203 JDA Flats, Nursary Circle,\nVaishali Nagar, Jaipur"
+                android:textColor="@color/gray_tab"
                 app:textStyle="@integer/roboto_medium" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="horizontal">
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_edit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dim_10"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_corner_green"
+                    android:gravity="center"
+                    android:padding="@dimen/dim_8"
+                    android:text="Edit"
+                    android:textColor="@color/colorPrimaryDark"
+                    app:textStyle="@integer/roboto_regular" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".5" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_delete"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dim_10"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_corner_green"
+                    android:gravity="center"
+                    android:padding="@dimen/dim_8"
+                    android:text="Delete"
+                    android:textColor="@color/colorPrimaryDark"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <com.localfriend.fonts.CustomFontTextView
-            android:id="@+id/txt_edit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dim_10"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_corner_green"
-            android:gravity="center"
-            android:padding="@dimen/dim_8"
-            android:text="Edit"
-            android:textColor="@color/colorPrimaryDark"
-            app:textStyle="@integer/roboto_regular" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"/>
-
-        <com.localfriend.fonts.CustomFontTextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dim_10"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_corner_green"
-            android:gravity="center"
-            android:padding="@dimen/dim_8"
-            android:text="Delete"
-            android:textColor="@color/colorPrimaryDark"
-            app:textStyle="@integer/roboto_regular" />
-    </LinearLayout>
 </LinearLayout>
