--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -9,49 +9,30 @@
 
     <include layout="@layout/toolbar_common" />
 
-    <ImageView
-        android:id="@+id/img_bag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_160"
-        android:background="@null"
-        android:src="@drawable/bag" />
-
-    <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_bag"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_16"
-        android:text="You have no past orders"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/dim_16"
-        app:textStyle="@integer/roboto_medium" />
-
-    <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_lets_get_started"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_label"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_10"
-        android:text="Lets get you started"
-        android:textSize="@dimen/dim_16"
-        app:textStyle="@integer/roboto_medium" />
-
-    <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_start_shopping"
+    <RelativeLayout
+        android:id="@+id/rl_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/dim_16"
-        android:background="@drawable/curvy_gradient_bg"
-        android:gravity="center"
-        android:padding="@dimen/dim_10"
-        android:text="Start Shopping"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dim_18"
-        app:textStyle="@integer/roboto_medium" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_common">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/white"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabIndicatorHeight="3dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextColor="@color/black" />
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tabs"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </RelativeLayout>
+
 </RelativeLayout>
