--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -14,8 +14,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/dim_20"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dim_20">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -23,13 +23,14 @@
                 android:background="@null"
                 android:src="@drawable/payment_new" />
 
-            <com.localfriend.fonts.CustomFontTextView                     app:textStyle="@integer/roboto_medium"
+            <com.localfriend.fonts.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Please Choose Your Payment Method"
                 android:textColor="@color/black"
-                android:textSize="@dimen/dim_18" />
+                android:textSize="@dimen/dim_18"
+                app:textStyle="@integer/roboto_medium" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -38,6 +39,7 @@
                 app:cardElevation="@dimen/dim_5">
 
                 <RelativeLayout
+                    android:id="@+id/rl_cod"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
@@ -61,13 +63,17 @@
                         android:layout_centerVertical="true"
                         android:checked="true" />
                 </RelativeLayout>
-            </android.support.v7.widget.CardView><android.support.v7.widget.CardView
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dim_10"
+                android:visibility="gone"
                 app:cardElevation="@dimen/dim_5">
 
                 <RelativeLayout
+                    android:id="@+id/rl_paytm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
