--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -22,11 +22,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingTop="@dimen/dim_10"
+                android:paddingBottom="5dp"
                 android:paddingLeft="@dimen/dim_10"
                 android:paddingRight="@dimen/dim_10"
-                android:paddingBottom="5dp"
-                >
+                android:paddingTop="5dp">
 
                 <com.localfriend.fonts.CustomFontTextView
                     android:layout_width="wrap_content"
@@ -38,7 +37,7 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dim_10"
+                    android:layout_marginTop="3dp"
                     android:elevation="@dimen/dim_10"
                     app:cardBackgroundColor="@color/white">
 
@@ -86,32 +85,49 @@
 
                         </LinearLayout>
 
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="DELIVERY ADDRESS"
+                    android:textSize="16sp"
+                    app:textStyle="@integer/roboto_medium" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    app:cardElevation="@dimen/dim_5">
+
+                    <RelativeLayout
+                        android:id="@+id/rl_cod"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:padding="5dp">
+
                         <com.localfriend.fonts.CustomFontTextView
-                            android:id="@+id/txt_add_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:background="@drawable/tv_bg"
-                            android:gravity="center"
-                            android:paddingBottom="@dimen/dim_10"
-                            android:paddingLeft="@dimen/dim_20"
-                            android:paddingRight="@dimen/dim_20"
-                            android:paddingTop="@dimen/dim_10"
-                            android:text="      +  ADD ADDRESS       "
-                            android:textSize="16sp"
+                            android:layout_centerVertical="true"
+                            android:drawableLeft="@drawable/ic_cod"
+                            android:drawablePadding="@dimen/dim_10"
+                            android:text="Cash on Delivery"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/dim_18"
                             app:textStyle="@integer/roboto_medium" />
 
-                        <TextView
-                            android:id="@+id/txt_change"
+                        <RadioButton
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:padding="5dp"
-                            android:visibility="gone"
-                            android:textColor="@color/blue_bg"
-                            android:text="Change" />
+                            android:layout_centerVertical="true"
+                            android:checked="true" />
                     </RelativeLayout>
-
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.RecyclerView
@@ -229,7 +245,7 @@
     </LinearLayout>
 
     <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_make_payment"
+            android:id="@+id/tv_make_payment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -240,7 +256,7 @@
         android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_10"
-        android:text="MAKE PAYMENT"
+        android:text="Place my order"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_15"
         app:textStyle="@integer/roboto_medium" />
