--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -19,39 +19,11 @@
         android:paddingRight="@dimen/dim_5"
         android:visibility="visible" />
 
-
-    <!--<com.localfriend.fonts.CustomFontTextView-->
-        <!--android:id="@+id/tv_checkout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginBottom="@dimen/dim_5"-->
-        <!--android:layout_marginLeft="@dimen/dim_20"-->
-        <!--android:layout_marginRight="@dimen/dim_20"-->
-        <!--android:background="@drawable/rounded_gredient"-->
-        <!--android:gravity="center"-->
-        <!--android:padding="@dimen/dim_9"-->
-        <!--android:text="Checkout"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="@dimen/dim_18"-->
-        <!--android:visibility="visible"-->
-        <!--app:textStyle="@integer/roboto_medium" />-->
-
-    <!--<com.localfriend.fonts.CustomFontTextView-->
-        <!--android:id="@+id/tv_start_shopping"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginBottom="@dimen/dim_5"-->
-        <!--android:layout_marginLeft="@dimen/dim_20"-->
-        <!--android:layout_marginRight="@dimen/dim_20"-->
-        <!--android:background="@drawable/rounded_gredient"-->
-        <!--android:gravity="center"-->
-        <!--android:padding="@dimen/dim_8"-->
-        <!--android:text="Start Shopping"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="@dimen/dim_18"-->
-        <!--android:visibility="visible"-->
-        <!--app:textStyle="@integer/roboto_medium" />-->
-
+    <ImageView
+        android:id="@+id/img_empty"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:src="@drawable/no_wishlist" />
 </RelativeLayout>
