--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -23,10 +23,10 @@
             android:layout_alignParentRight="true"
             android:layout_gravity="right|top"
             android:layout_marginTop="-5dp"
-            android:alpha=".5"
+            android:layout_marginRight="-5dp"
             android:background="@null"
             android:padding="5dp"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/button_delete_big" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -90,43 +90,41 @@
                     android:layout_alignBottom="@+id/tv_item_cost"
                     android:layout_marginTop="5dp">
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <ImageView
                         android:id="@+id/tv_plus"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/circular_bg"
                         android:gravity="center"
-                        android:text=" + "
-                        android:textSize="@dimen/dim_18"
-                        app:textStyle="@integer/roboto_medium" />
+                        android:padding="3dp"
+                        android:src="@drawable/btn_plus" />
 
                     <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/tv_counter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dim_15"
                         android:layout_marginLeft="@dimen/dim_15"
+                        android:layout_marginRight="@dimen/dim_15"
                         android:layout_toLeftOf="@+id/tv_plus"
                         android:text="1"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_18"
-                        app:textStyle="@integer/roboto_medium" />
+                        android:textSize="18sp"
+                        app:textStyle="@integer/roboto_light" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <ImageView
                         android:id="@+id/tv_minus"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:background="@drawable/circular_bg"
-                        android:gravity="center_horizontal"
-                        android:text=" - "
-                        android:textSize="@dimen/dim_18"
-                        app:textStyle="@integer/roboto_medium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/tv_counter"
-                        android:layout_toStartOf="@+id/tv_counter" />
+                        android:layout_toStartOf="@+id/tv_counter"
+                        android:gravity="center_horizontal"
+                        android:padding="3dp"
+                        android:src="@drawable/btn_minus"
+                        android:text=" - "
+                        android:textSize="18sp" />
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
