--- a/app/src/main/res/layout/dialog_loader.xml
+++ b/app/src/main/res/layout/dialog_loader.xml
@@ -5,21 +5,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/avi"
-        style="@style/AVLoadingIndicatorView.Large"
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif_loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible"
-        app:indicatorColor="@color/colorPrimary"
-        app:indicatorName="BallGridPulseIndicator" />
+        android:background="@drawable/loader"
+        android:src="@drawable/loader" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/txt_load_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/avi"
+        android:layout_below="@+id/gif_loader"
         android:layout_centerHorizontal="true"
         android:padding="@dimen/dim_10"
         android:text=""
