--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -22,80 +22,83 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_price"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/tv_checkout"
         android:layout_marginBottom="5dp"
-        android:layout_marginLeft="@dimen/dim_20"
-        android:layout_marginRight="@dimen/dim_20"
-        android:visibility="gone"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp">
+        android:visibility="gone">
 
         <LinearLayout
+            android:id="@+id/ll_amounts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/tv_make_payment"
+            android:background="@color/white"
             android:orientation="horizontal">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="5dp">
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:id="@+id/txt_subtotal_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:padding="2dp"
-                    android:text="Sub Total"
-                    android:textSize="16sp"
-                    app:textStyle="@integer/roboto_medium" />
+                    android:layout_gravity="center"
+                    android:text="Total Amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
 
                 <com.localfriend.fonts.CustomFontTextView
                     android:id="@+id/txt_subtotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_subtotal_title"
-                    android:layout_centerHorizontal="true"
-                    android:text="Sub Total"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_3"
+                    android:text="Rs. 120"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    app:textStyle="@integer/roboto_medium" />
-
-            </RelativeLayout>
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
 
             <View
-                android:layout_width="1dp"
+                android:layout_width="@dimen/dim_1"
                 android:layout_height="match_parent"
-                android:background="@color/gray_tab"></View>
+                android:background="@color/blue_text" />
 
-            <RelativeLayout
+
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="5dp">
 
-                <com.localfriend.fonts.CustomFontTextView
+                <com.localfriend.fonts.CustomFontPtSansText
                     android:id="@+id/txt_total_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:padding="2dp"
-                    android:text="Total"
-                    android:textSize="16sp"
-                    app:textStyle="@integer/roboto_medium" />
+                    android:layout_gravity="center"
+                    android:text="Payble amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
 
                 <com.localfriend.fonts.CustomFontTextView
                     android:id="@+id/txt_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txt_total_title"
-                    android:layout_centerHorizontal="true"
-                    android:text="Sub Total"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_5"
+                    android:text="Rs. 120"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    app:textStyle="@integer/roboto_medium" />
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
 
-            </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -108,7 +111,7 @@
         android:layout_marginBottom="@dimen/dim_5"
         android:layout_marginLeft="@dimen/dim_20"
         android:layout_marginRight="@dimen/dim_20"
-        android:background="@drawable/rounded_gredient"
+        android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_9"
         android:text="Checkout"
@@ -134,7 +137,7 @@
         android:layout_marginBottom="@dimen/dim_5"
         android:layout_marginLeft="@dimen/dim_20"
         android:layout_marginRight="@dimen/dim_20"
-        android:background="@drawable/rounded_gredient"
+        android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_8"
         android:text="Start Shopping"
