--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,13 +73,13 @@
                         android:background="@null"
                         android:src="@drawable/tiffine_wala" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Tiffin wala"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
 
@@ -100,13 +100,13 @@
                         android:background="@null"
                         android:src="@drawable/vegetables" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Vegetable"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
 
@@ -128,13 +128,13 @@
                         android:background="@null"
                         android:src="@drawable/fresh_fruits" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Fresh Fruits"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
             </LinearLayout>
@@ -161,13 +161,13 @@
                         android:background="@null"
                         android:src="@drawable/fast_food_home" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Fast Food"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
 
@@ -188,13 +188,13 @@
                         android:background="@null"
                         android:src="@drawable/laddo" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Mithai wala"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
 
@@ -216,13 +216,13 @@
                         android:background="@null"
                         android:src="@drawable/hot_deals" />
 
-                    <com.localfriend.fonts.CustomFontTextView
+                    <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="Hot Deals"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/dim_14"
+                        android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
             </LinearLayout>
