--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context="com.localfriend.fragments.ScheduleFragment">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ll_amounts">
@@ -66,7 +66,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/dim_10"
-                                android:layout_marginTop="-5dp"
+                                android:layout_marginTop="-10dp"
                                 android:padding="@dimen/dim_5"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/dim_18"
@@ -76,12 +76,12 @@
                                 android:id="@+id/txt_address"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="10dp"
+                                android:layout_marginBottom="8dp"
                                 android:layout_marginLeft="@dimen/dim_10"
-                                android:padding="@dimen/dim_5"
+                                android:layout_marginTop="-8dp"
+                                android:paddingLeft="@dimen/dim_5"
                                 android:textColor="@color/gray_tab"
                                 app:textStyle="@integer/roboto_medium" />
-
 
                         </LinearLayout>
 
@@ -93,7 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="DELIVERY ADDRESS"
+                    android:text="PAYMENT MODE"
                     android:textSize="16sp"
                     app:textStyle="@integer/roboto_medium" />
 
@@ -145,7 +145,7 @@
 
             </android.support.v7.widget.CardView>
         </LinearLayout>
-    </RelativeLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/ll_amounts"
@@ -160,8 +160,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp">
 
             <com.localfriend.fonts.CustomFontTextView
                 android:layout_width="wrap_content"
@@ -177,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dim_5"
+                android:layout_marginTop="4dp"
                 android:text="Rs. 120"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -189,24 +189,24 @@
             android:layout_height="match_parent"
             android:background="@color/blue_text" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:orientation="vertical"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingTop="10dp">-->
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dim_5"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="Promo code"
-                android:padding="5dp"
-                android:textSize="16sp" />
-        </LinearLayout>
+            <!--<EditText-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="@dimen/dim_5"-->
+                <!--android:background="@null"-->
+                <!--android:gravity="center"-->
+                <!--android:hint="Promo code"-->
+                <!--android:padding="5dp"-->
+                <!--android:textSize="16sp" />-->
+        <!--</LinearLayout>-->
 
         <View
             android:layout_width="@dimen/dim_1"
@@ -218,8 +218,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp">
 
             <com.localfriend.fonts.CustomFontTextView
                 android:layout_width="wrap_content"
@@ -235,7 +235,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dim_5"
+                android:layout_marginTop="4dp"
                 android:text="Rs. 120"
                 android:textColor="@color/black"
                 android:textSize="16sp"
