--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -101,15 +101,16 @@
                             android:textSize="16sp"
                             app:textStyle="@integer/roboto_medium" />
 
-                        <TextView
-                            android:id="@+id/txt_change"
+                        <ImageView
+                            android:id="@+id/img_change"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:padding="5dp"
-                            android:visibility="gone"
-                            android:textColor="@color/blue_bg"
-                            android:text="Change" />
+                            android:src="@drawable/edit_address"
+                            android:visibility="visible"
+
+                             />
                     </RelativeLayout>
 
                 </android.support.v7.widget.CardView>
@@ -145,13 +146,13 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:paddingTop="5dp">
 
-            <com.localfriend.fonts.CustomFontTextView
+            <com.localfriend.fonts.CustomFontPtSansText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Sub Total"
+                android:text="Total Amount"
                 android:textColor="@color/blue_text"
                 android:textSize="16sp"
                 app:textStyle="@integer/roboto_regular" />
@@ -173,24 +174,7 @@
             android:layout_height="match_parent"
             android:background="@color/blue_text" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dim_5"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="Promo code"
-                android:padding="5dp"
-                android:textSize="16sp" />
-        </LinearLayout>
 
         <View
             android:layout_width="@dimen/dim_1"
@@ -203,13 +187,13 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:paddingTop="5dp">
 
-            <com.localfriend.fonts.CustomFontTextView
+            <com.localfriend.fonts.CustomFontPtSansText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Total Amount"
+                android:text="Payble amount"
                 android:textColor="@color/blue_text"
                 android:textSize="16sp"
                 app:textStyle="@integer/roboto_regular" />
