--- a/app/src/main/res/layout/fragment_tiffin.xml
+++ b/app/src/main/res/layout/fragment_tiffin.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="BreakFast"
+            android:text="Breakfast"
             android:textColor="@color/white"
             android:textSize="22sp"
             app:textStyle="@integer/roboto_medium" />
